--- a/index.html
+++ b/index.html
@@ -3,7 +3,32 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Portfolio</title>
-  </head>
-  <body></body>
+    <link rel="stylesheet" href="style.css">
+    <title>Document</title>
+    </head>
+    <body>
+    <h3>My Portfolio</h3>
+    <img src="S__3227655.jpg"
+    width="400px"
+    style="margin-left: auto;
+    margin-right: auto;">
+     <p>My name is Non. Hi ! Nice to meet you all.<br/>
+     I am Non. &#129505;
+     </p>
+
+     <h3>Skills &#128736;</h3>
+     <div class="skill-container">
+     <h3 
+     class="skill-header">Programming</h3>
+     <p>I can code c++</p>
+     </div>
+     <div class="skill-container">
+      <h3 
+      class="skill-header">sing</h3>
+      <p>I can sing and write songs.</p>
+      </div>
+
+      <a href="Page2.html"> Next page</a>
+
+  </body>
 </html>
