update my portfolio

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <p>I can sing and write songs.</p>
       </div>
 
-      <a href="Page2.html"> Next page</a>
+      <a href="page2.html"> Next page</a>
 
   </body>
 </html>
