--- a/page2.html
+++ b/page2.html
@@ -21,7 +21,7 @@
        </div>  
 
         <a href="index.html">Previous page</a>
-        <a href="Page3.html"> Next page</a>
+        <a href="page3.html"> Next page</a>
 
 </body>
 </html>
