--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
       class="skill-header">sing</h3>
       <p>I can sing and write songs.</p>
       </div>
-
-      <a href="page2.html"> Next page</a>
-
+      <p><a href="page2.html"> Next page</a></p>
+      
+     
   </body>
 </html>
