--- a/page2.html
+++ b/page2.html
@@ -20,8 +20,8 @@
        <p>ดู Anime เล่นเกม ร้องเพลง และแต่งเพลงเพื่ออัดไว้ฟังเองบ้างเป็นบางครั้ง</p>
        </div>  
 
-        <a href="index.html">Previous page</a>
-        <a href="page3.html"> Next page</a>
+       <p><a href="index.html">Previous page</a>
+        <a href="page3.html"> Next page</a></p>
 
 </body>
 </html>
