--- a/page3.html
+++ b/page3.html
@@ -15,6 +15,6 @@
       <p>PHONE NUMBER: 0984208422</p>
       </div>
 
-       <a href="page2.html">Previous page</a>
+       <p><a href="page2.html">Previous page</a></p>
 </body>
 </html>
