--- a/Contact.html
+++ b/Contact.html
@@ -21,7 +21,7 @@
 
     <h3 class="fw-bold">Contact &#128222;</h3>
     <div class="d-flex justify-content-center align-items-center mx-auto gap-3" style="max-width: 550px">
-      <img src="S__3227655.jpg"
+      <img src="images/แว่นสองนิ้ว.jpg"
       width="200px" height="200px"
       style="
       margin-right: auto; object-fit:cover" ; class="rounded-circle" >
