--- a/Gallery.html
+++ b/Gallery.html
@@ -25,7 +25,7 @@
     <div class="d-flex gap-3 justify-conteent-center align-items-start flex-wrap">
 
         <div class="card" style="width: 18rem">
-          <img src="20733.jpg" class="card-img-top">
+          <img src="images/แว่นสองนิ้ว.jpg" class="card-img-top">
           <div class="card-body">
             <h5 class="card=title d-flex justify-content-center">Wearing Glasses</h5>
             <h5 class="card=title d-flex justify-content-center">For The First Time</h5>
@@ -36,7 +36,7 @@
         </div>
 
         <div class="card" style="width: 18rem">
-          <img src="20730.jpg" class="card-img-top">
+          <img src="images/ยิ้ม.jpg" class="card-img-top">
           <div class="card-body">
             <h5 class="card=title d-flex justify-content-center" >Smile From Family</h5>
             <p class="card-text">
@@ -46,7 +46,7 @@
         </div>
 
         <div class="card" style="width: 18rem">
-          <img src="20729.jpg" class="card-img-top">
+          <img src="images/มวย.jpg" class="card-img-top">
           <div class="card-body">
             <h5 class="card=title d-flex justify-content-center">
               First Muay Thai Sparring</h5>
@@ -57,7 +57,7 @@
         </div>
 
         <div class="card" style="width: 18rem">
-          <img src="20731.jpg" class="card-img-top">
+          <img src="images/จุ๊บนอน.jpg" class="card-img-top">
           <div class="card-body">
             <h5 class="card=title d-flex justify-content-center">Dearest Sister</h5>
             <p class="card-text">
@@ -67,7 +67,7 @@
         </div>
 
         <div class="card" style="width: 18rem">
-          <img src="20732.jpg" class="card-img-top">
+          <img src="images/จุ๊บโก๊ะ.jpg" class="card-img-top">
           <div class="card-body">
             <h5 class="card=title d-flex justify-content-center">Sibling</h5>
             <p class="card-text">
@@ -77,7 +77,7 @@
         </div>
 
         <div class="card" style="width: 18rem">
-          <img src="20734.jpg" class="card-img-top">
+          <img src="images/tono.jpg" class="card-img-top">
           <div class="card-body">
             <h5 class="card=title d-flex justify-content-center">Feral Cat</h5>
             <p class="card-text">
