--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
     
     <div class="d-flex justify-content-center align-items-center mx-auto gap-3" style="max-width: 660px">
-    <img src="S__3227655.jpg"
+    <img src="images/โปรไฟล์.jpg"
     width="150px" height="150px"
     style="
     margin-right: auto; object-fit:cover" ; class="rounded-circle" >
@@ -44,12 +44,12 @@
       <div style="max-width: 700px" class="mx-auto px-3">
         <div class="d-flex border mb-3 shadow-sm bg-dark" style="border-radius: 20px;">
           <div class="my-rounded-left">
-            <img src="" width="150px" height="150px" style="object-fit: cover" class="my-rounded-left d-none d-sm-block">
+            <img src="images/photo programing.jpg" width="150px" height="150px" style="object-fit: cover" class="my-rounded-left d-none d-sm-block">
           </div>
           <div class="p-4">
               <p class="fw-semibold fs-5" style="color: lightseagreen;">Programming</p>
               <span class="text-muted">
-                กูทำโค้ดเป็นไอสัส
+                สามารถเขียนภาษา C++, CSS, JAVA, HTML, JAVA และ JAVA SCRIPT ได้
               </span>
           </div>
         </div>
@@ -73,7 +73,7 @@
           <div class="p-4">
               <p class="fw-semibold fs-5" style="color: lightseagreen;">Programming</p>
               <span class="text-muted">
-                กูทำโค้ดเป็นไอสัส
+                กูทำโค้ดไม่เป็นไอสัส
               </span>
           </div>
         </div>
