latext close final

--- a/Experience.html
+++ b/Experience.html
@@ -12,12 +12,12 @@
 
 </head>
 <body>
-    <div class="d-flex gap-5 align-items-start justify-content-center fw-bold my-6 border-bottom p-4 bg-dark mb-5">
-      <a href="index.html" style="text-decoration:none" >HOME</a>
-      <a href="Experience.html" style="text-decoration:none" >EXPERIENCE</a>
-      <a href="Gallery.html" style="text-decoration:none" >GALLERY</a>
-      <a href="Contact.html" style="text-decoration:none" >CONTACT</a>
-      </div>
+  <div class="d-flex gap-5 align-items-start justify-content-center fw-bold my-6 border-bottom p-4 bg-dark mb-5">
+    <a href="index.html" style="color: lightseagreen; text-decoration:none" >HOME</a>
+    <a href="Experience.html" style="color: lightseagreen; text-decoration:none" >EXPERIENCE</a>
+    <a href="Gallery.html" style="color: lightseagreen; text-decoration:none" >GALLERY</a>
+    <a href="Contact.html" style="color: lightseagreen; text-decoration:none" >CONTACT</a>
+  </div>
 
     <h3 class="fw-bold">Experience &#128295;</h3>
     <div class="skill-container">
