--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <div class="fw-semibold fs-5 mt-4 mb-2" style="color: lightseagreen;">Programming</div>
       
               <span class="text-muted">
-                เขียนภาษา C++, CSS, JAVA, HTML, JAVA และ JAVA SCRIPT ได้
+                เขียนภาษา C++, CSS, HTML, JAVA และ JAVA SCRIPT ได้
               </span>
           </div>
         </div>
