--- a/Gallery.html
+++ b/Gallery.html
@@ -10,10 +10,17 @@
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
+    <style>
+      body
+    {
+      background:url(images/back\ groud\ gallery.jpg) no-repeat center center/cover;
+    }
+    </style>
+
 </head>
 
 <body>
-  <div class="d-flex gap-5 align-items-start justify-content-center fw-bold my-6 border-bottom p-4 bg-dark mb-5">
+  <div class="d-flex gap-5 align-items-start justify-content-center fw-bold my-6 border-bottom p-4 bg-dark border-dark mb-5">
     <a href="index.html" style="color: lightseagreen; text-decoration:none" >HOME</a>
     <a href="Experience.html" style="color: lightseagreen; text-decoration:none" >EXPERIENCE</a>
     <a href="Gallery.html" style="color: lightseagreen; text-decoration:none" >GALLERY</a>
@@ -24,66 +31,66 @@
     <div class="d-flex justify-content-center align-items-center mx-auto" style="max-width: 900px">
     <div class="d-flex gap-3 justify-conteent-center align-items-start flex-wrap">
 
-        <div class="card" style="width: 18rem">
+        <div class="card border-dark bg-dark" style="width: 18rem">
           <img src="images/แว่นสองนิ้ว.jpg" class="card-img-top">
           <div class="card-body">
-            <h5 class="card=title d-flex justify-content-center">Wearing Glasses</h5>
-            <h5 class="card=title d-flex justify-content-center">For The First Time</h5>
-            <p class="card-text">
+            <h5 class="card=title d-flex justify-content-center fw-semibold" style="color: lightseagreen;">Wearing Glasses</h5>
+            <h5 class="card=title d-flex justify-content-center fw-semibold" style="color: lightseagreen;">For The First Time</h5>
+            <p class="card-text text-light">
               "ยืมแว่นตาพี่มาลองใส่ เพื่อดูทรงแว่นที่อยากทำเนื่องจากสายตาเริ่มสั้น"
             </p>
           </div>
         </div>
 
-        <div class="card" style="width: 18rem">
+        <div class="card border-dark bg-dark" style="width: 18rem">
           <img src="images/ยิ้ม.jpg" class="card-img-top">
           <div class="card-body">
-            <h5 class="card=title d-flex justify-content-center" >Smile From Family</h5>
-            <p class="card-text">
+            <h5 class="card=title d-flex justify-content-center fw-semibold" style="color: lightseagreen;">Smile From Family</h5>
+            <p class="card-text text-light">
               "พี่บินมาเยี่ยมที่เชียงใหม่ เป็นความสุขจากการได้เจอครอบครัว"
             </p>
           </div>
         </div>
 
-        <div class="card" style="width: 18rem">
+        <div class="card border-dark bg-dark" style="width: 18rem">
           <img src="images/มวย.jpg" class="card-img-top">
           <div class="card-body">
-            <h5 class="card=title d-flex justify-content-center">
+            <h5 class="card=title d-flex justify-content-center fw-semibold" style="color: lightseagreen;">
               First Muay Thai Sparring</h5>
-            <p class="card-text">
+            <p class="card-text text-light">
               "ฝึกมวยไทยครั้งแรก"
             </p>
           </div>
         </div>
 
-        <div class="card" style="width: 18rem">
+        <div class="card border-dark bg-dark" style="width: 18rem">
           <img src="images/จุ๊บนอน.jpg" class="card-img-top">
           <div class="card-body">
-            <h5 class="card=title d-flex justify-content-center">Dearest Sister</h5>
-            <p class="card-text">
+            <h5 class="card=title d-flex justify-content-center fw-semibold" style="color: lightseagreen;">Dearest Sister</h5>
+            <p class="card-text text-light">
               "กลับไปเจอน้องสาวช่วงสั้นๆหลังซัมเมอร์ก่อนจะเปิดเทอมอีกครั้ง"
             </p>
           </div>
         </div>
 
-        <div class="card" style="width: 18rem">
+        <div class="card border-dark bg-dark" style="width: 18rem">
           <img src="images/จุ๊บโก๊ะ.jpg" class="card-img-top">
           <div class="card-body">
-            <h5 class="card=title d-flex justify-content-center">Sibling</h5>
-            <p class="card-text">
+            <h5 class="card=title d-flex justify-content-center fw-semibold" style="color: lightseagreen;">Sibling</h5>
+            <p class="card-text text-light">
               "ภาพพี่น้องที่นอนขดอยู่ด้วยกัน"
             </p>
           </div>
         </div>
 
-        <div class="card" style="width: 18rem">
+        <div class="card border-dark bg-dark" style="width: 18rem">
           <img src="images/tono.jpg" class="card-img-top">
           <div class="card-body">
-            <h5 class="card=title d-flex justify-content-center">Feral Cat</h5>
-            <p class="card-text">
+            <h5 class="card=title d-flex justify-content-center fw-semibold" style="color: lightseagreen;">Feral Cat</h5>
+            <p class="card-text text-light">
               "แมวของพี่สาวที่กรุงเทพ
             </p>
-            <p class="card-text">
+            <p class="card-text text-light">
               ที่ต้องเจอทุกครั้งก่อนจะกลับเชียงใหม่"
             </p>
           </div>
